--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.news_app">
+        <uses-permission android:name="android.permission.Internet"/>
    <application
-        android:label="news_app"
+        android:label="Quick News"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
