--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   intl:
   cached_network_image:
   lottie: ^1.2.1
+  firebase_core: ^2.0.0
+  firebase_storage: ^11.0.1
+  firebase_auth: ^4.0.0
+  cloud_firestore: ^4.0.1
+  fluttertoast: ^8.1.0
+  firebase_database: ^10.0.1
+
  
 
 
