--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   cloud_firestore: ^4.0.1
   fluttertoast: ^8.1.0
   firebase_database: ^10.0.1
+  firebase_messaging: ^14.1.2
+  app_settings: ^4.2.0
+  flutter_local_notifications: ^12.0.4
 
  
 
